@@ -1,6 +1,8 @@
 Release history for Benchmark-CSV
 
 {{$NEXT}}
+ [Bugfix]
+ - Dont require gettime, and if its not available, dont expose dependent methods
 
 0.001000 2014-09-17T12:16:30Z
  - First version.
